# neto-mcp

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml
neto_mcp_server/: main.py  nql-guide.md
neto_mcp_server/neto/: api.py
